--- a/spruthi1.html
+++ b/spruthi1.html
@@ -1,6 +1,6 @@
-cjnekjvhkjerv
-ferkhfiuhferjfler\
-jkhuierhoifjerf
-ihlnklerfnlkjhkerjnklerger
-jlerhvkjernlkjfkler
-daddddhdhwdjud
+java
+<html>
+    css
+    javascript
+    
+</html>
